# process_communication_template

./: .gitignore  CMakeLists.txt  README.md  main.cpp
.github/workflows/: cmake-multi-platform.yml
common/process_communications/: ErrorTypes.hpp  InprocTransport.hpp  TCPTransport.hpp
examples/: CMakeLists.txt  publisher.cpp  pubsub_example.cpp  subscriber.cpp
process_communication/: process_communication.cmake
process_communications/: ErrorTypes.hpp  InprocTransport.hpp  TCPTransport.hpp
tests/: CMakeLists.txt
tests/common/process_communications/: ErrorTypesTest.cpp  InprocTransportTest.cpp  TCPTransportTest.cpp
